--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+    <app-navbar></app-navbar>    
+    <router-outlet></router-outlet>
+
+    <hr/>
+    <footer>
+        <div class="row">
+            <div class="col-md-4">Angular2 - Bootstrap 4</div>
+            <div class="col-md-4 text-center">Rich Cheng</div>
+            <div class="col-md-4 text-right">&copy; 2017</div>
+        </div>
+    </footer>    
+</div>
