--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,10 @@
-<div class="container">
-    <app-navbar></app-navbar>    
-    <router-outlet></router-outlet>
-
-    <hr/>
-    <footer>
-        <div class="row">
-            <div class="col-md-4">Angular2 - Bootstrap 4</div>
-            <div class="col-md-4 text-center">Rich Cheng</div>
-            <div class="col-md-4 text-right">&copy; 2017</div>
-        </div>
-    </footer>    
-</div>
+<app-navbar></app-navbar>    
+<router-outlet></router-outlet>
+<hr/>
+<footer>
+    <div class="row">
+        <div class="col">Angular2 - Bootstrap 4</div>
+        <div class="col text-center">Rich Cheng</div>
+        <div class="col text-right">&copy; 2016</div>
+    </div>
+</footer>    
