--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="#">MyStocks</a>
   <ul class="nav navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+      <a class="nav-link" routerLink="/">Dashboard</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/about">About</a>
