--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
-<app-navbar></app-navbar>    
-<router-outlet></router-outlet>
-<hr/>
-<footer>
-    <div class="row">
-        <div class="col">Angular2 - Bootstrap 4</div>
-        <div class="col text-center">Rich Cheng</div>
-        <div class="col text-right">&copy; 2016</div>
-    </div>
-</footer>    
+<div class="container-fluid">
+    <app-navbar></app-navbar>
+
+    <router-outlet></router-outlet>
+
+    <hr/>
+    
+    <footer>
+        <div class="row">
+            <div class="col">Angular2</div>
+            <div class="col text-center">Rich Cheng</div>
+            <div class="col text-right">&copy; 2016</div>
+        </div>
+    </footer>
+</div>
