--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<h4>Technologies used in this apps:</h4>
+<h4>Tools used in this apps:</h4>
 
 <div *ngIf="aboutItems">
      <div class="row align-items-left" *ngFor="let aboutItem of aboutItems">
