--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit(theForm)" #theForm="ngForm" novalidate>
+<form (ngSubmit)="onSubmit(theForm)" #theForm="ngForm">
   <div class="row">
     <div class="col col-sm-1 col-md-1 col-lg-1 col-xl-1">
       <button type="button" class="btn btn-primary btn-sm" (click)="openModal('Add')">Add Stock</button>
@@ -106,6 +106,7 @@
       <button type="button" class="btn btn-info btn-sm" (click)="clearForm()">Clear</button>
       <button type="button" class="btn btn-secondary btn-sm" (click)="cancelModal()">Cancel</button>
       <button type="button" class="btn btn-primary btn-sm" [disabled]="!theForm.valid" (click)="saveModal()">Save</button>
+      <!--<button type="button" class="btn btn-primary btn-sm" [disabled]="isInvalid(theForm)" (click)="saveModal()">Save</button>-->
       <!--<button type="submit" class="btn btn-primary btn-sm" [disabled]="theForm.invalid">Submit</button>-->
     </div>
 </template>
