--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,18 +2,18 @@
   <a class="navbar-brand" href="/"><img src="assets\img\rubic-cube.gif" class="brand-icon"></a>
   <ul class="nav navbar-nav mr-auto">
     <li>
-      <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Home</a>
+      <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="/"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
     </li>
     <li>
-      <a routerLinkActive="active" routerLink="/dashboard">Dashboard</a>
+      <a routerLinkActive="active" routerLink="/dashboard"><i class="fa fa-dashboard" aria-hidden="true"></i>Dashboard</a>
     </li>
     <li>
-      <a routerLinkActive="active" routerLink="/about">About</a>
+      <a routerLinkActive="active" routerLink="/about"><i class="fa fa-info" aria-hidden="true"></i>About</a>
     </li>
   </ul>
   <ul class="nav navbar-nav justify-content-end">
-    <li><a routerLinkActive="active" href="#" (click)="auth.login()" *ngIf="!auth.authenticated()">Login</a></li>
-    <li><a routerLinkActive="active" routerLink="/profile" *ngIf="auth.authenticated()">Profile</a></li>
-    <li><a routerLinkActive="active" href="#" (click)="auth.logout()" *ngIf="auth.authenticated()">Logout</a></li>
+    <li><a routerLinkActive="active" href="#" (click)="auth.login()" *ngIf="!auth.authenticated()"><i class="fa fa-unlock" aria-hidden="true"></i>Login</a></li>
+    <li><a routerLinkActive="active" routerLink="/profile" *ngIf="auth.authenticated()"><i class="fa fa-user" aria-hidden="true"></i>Profile</a></li>
+    <li><a routerLinkActive="active" href="#" (click)="auth.logout()" *ngIf="auth.authenticated()"><i class="fa fa-lock" aria-hidden="true"></i>Logout</a></li>
   </ul>
 </nav>
